Ajout du debut de la premiere page

--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -9,12 +9,6 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/Users/mateog./Desktop/COURS BUT/S4/php symfony/PanierMalin/src/Controller/AccueilController.php'|file_link(0) }}">src/Controller/AccueilController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/Users/mateog./Desktop/COURS BUT/S4/php symfony/PanierMalin/templates/accueil/index.html.twig'|file_link(0) }}">templates/accueil/index.html.twig</a></code></li>
-    </ul>
+    <h1>Qui est là ?</h1>
 </div>
 {% endblock %}
