--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,11 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: none;
+    text-decoration: none;
+    list-style: none;
+}
+
 body {
     background-color: lightgray;
 }
