Ajout d'ingrédients dans une liste

--- a/templates/user/new_liste.html.twig
+++ b/templates/user/new_liste.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('liste/_form.html.twig') }}
 
-    <a href="{{ path('app_liste_index') }}">back to list</a>
+    <a href="{{ path('app_user_liste') }}">back to list</a>
 {% endblock %}
