--- a/templates/user/liste.html.twig
+++ b/templates/user/liste.html.twig
@@ -22,9 +22,10 @@
                 <td>{{ liste.nomListe }}</td>
                 <td>{{ liste.dateCreation }}</td>
                 <td>
-                    <a href="{{ path('app_liste_show', {'id': liste.id}) }}">show</a>
+                    <a href="{{ path('app_user_liste_id', {'id': liste.id}) }}">show</a>
                     <a href="{{ path('app_liste_edit', {'id': liste.id}) }}">edit</a>
                 </td>
+                <span>{{ liste.getPrixMin() }}</span>
             </tr>
         {% else %}
             <tr>
