--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -9,12 +9,14 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Qui est là ?</h1>
+    <h1 class="hidden">Qui est là ?</h1>
 </div>
 <div>
+<div class="barnoir">
+</div>
     {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button type="submit">{{button_label|default("Qui est là ?")}}</button>
+    {{ form_widget(form.pseudo, {'attr':{'class':'form-pseudo'}}) }}
+    <button type="submit" class="hidden">{{button_label|default("Qui est là ?")}}</button>
     {{ form_end(form) }}
 </div>
 
