--- a/templates/navigation.html.twig
+++ b/templates/navigation.html.twig
@@ -1,5 +1,9 @@
 <div class="navigation-bar">
-  <div>Images 1</div>
+  <div>
+     <img src="{{ asset('images/Shoppingdroite.png') }}" alt="logo" width="100" height="100">
+  </div>
   <h1> <a href="{{ path('app_accueil')}}">Panier Malin</a></h1>
-  <div>Images 2</div>
+  <div>
+    <img src="{{ asset('images/Shoppinggauche.png') }}" alt="logo" width="100" height="100">
+  </div>
 </div>
