--- a/templates/user/liste.html.twig
+++ b/templates/user/liste.html.twig
@@ -3,7 +3,8 @@
 {% block title %}Liste index{% endblock %}
 
 {% block body %}
-    <h1>Liste index</h1>
+
+    <div id="statsContainer"></div>
 
     <table class="table">
         <thead>
@@ -25,7 +26,7 @@
                     <a href="{{ path('app_user_liste_id', {'id': liste.id}) }}">show</a>
                     <a href="{{ path('app_liste_edit', {'id': liste.id}) }}">edit</a>
                 </td>
-                <span>{{ liste.getPrixMin() }}</span>
+                <td>{{ liste.getPrixMin() }}</td>
             </tr>
         {% else %}
             <tr>
