Ajout d'un article

--- a/templates/user/show_liste.html.twig
+++ b/templates/user/show_liste.html.twig
@@ -31,6 +31,17 @@
 
         </tbody>
     </table>
+    <div>
+        <h2>Ajouter un article</h2>
+
+        {{ form_start(form) }}
+            {{ form_row(form.idListe) }}
+            {{ form_row(form.idArticle) }}
+            {{ form_row(form.quantite) }}
+            {{ form_row(form.estMarque) }}
+            <button type="submit">{{button_label|default("Ajouter à la liste")}}</button>
+        {{ form_widget(form) }}
+    </div>
 
     <a href="{{ path('app_user_liste') }}">back to list</a>
 
