--- a/templates/user/liste_articles.html.twig
+++ b/templates/user/liste_articles.html.twig
@@ -9,23 +9,15 @@
         <ul id="allIng"> 
         </ul>
         <div class="container_recherche" id="container_recherche">
-
-
-            <input type="text" placeholder="Insérez vos ingrédients:" list="platsLi" id="inpPlats">
-            <datalist id="platsLi">
-
-                {% for article in articles %}
-                    <option value="{{ article.getNomArticle }}" prix="{{ article.getPrix }}">
-                        {{ article.getNomArticle }}
-                    </option>
-                {% endfor %}
-
-            </datalist>
-        
-        <p id="totalListe"> Total de la liste : <span id="totalNum">0<span>€</p>
-
-            <button type="button" id="btnAjout">Ajouter</button>
+            {{ form_start(form) }}
+                {{ form_row(form.idListe) }}
+                {{ form_row(form.idArticle) }}
+                {{ form_row(form.quantite) }}
+                {{ form_row(form.estMarque) }}
+                <button type="submit">{{button_label|default("Ajouter à la liste")}}</button>
+            {{ form_widget(form) }}
         </div>
+
 
 
     <a href="{{ path('app_user_liste') }}">back to list</a>
