--- a/templates/liste/_form.html.twig
+++ b/templates/liste/_form.html.twig
@@ -1,4 +1,4 @@
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+    {{ form_widget(form.nomListe, {'attr':{'class':'form-liste'}}) }}
+    <button class="btn hidden">{{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
