--- a/templates/liste/edit.html.twig
+++ b/templates/liste/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('liste/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_liste_index') }}">back to list</a>
+    <a href="{{ path('app_user_liste') }}">back to list</a>
 
     {{ include('liste/_delete_form.html.twig') }}
 {% endblock %}
