--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -83,9 +83,7 @@ input::placeholder {
     width: 100vw;
     flex-direction: column;
 }
-#backliste
-{
-    
+#backliste{
     display: flex;
     justify-content: center;
     align-items: flex-end;
@@ -104,4 +102,32 @@ input::placeholder {
     font-size: 1vw;
     text-align: center;
     border: 3px solid black;
+}
+.pageshowlist{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: row;
+}
+.infoliste{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    flex-direction: row;
+}
+
+.dateCreationliste,.nomliste{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height: 6vh;
+    font-family: 'Helvetica 55 Roman', sans-serif;
+    width:20vw;
+    background-color: rgb(0, 0, 0);
+    font-size: 1vw;
+    text-align: center;
+    color: white;
+
 }
