--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -56,7 +56,7 @@ input::placeholder {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100vw;
+    width: 100%;
     flex-direction: column;
 }
 
@@ -70,9 +70,134 @@ input::placeholder {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 90vw;
-    border-right: 3px black solid;
+    width: 100%;
+    border-bottom: 3px black solid;
     border-top: none;
-    height: 5rem;
+    height: 6rem;
     flex-direction: column;
+}
+
+#plusBouton{
+    background-color: black;
+    height:5rem;
+    width: 5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 0.3s ease;
+}
+
+#plusBouton:hover, .moinsBouton:hover{
+    transform: scale(1.2);
+    transition: 0.5s ease;
+    cursor: pointer;
+}
+
+#toutAccueil{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#vertical{
+    background-color: white;
+    height: 3rem;
+    width: 1rem;
+    position: relative;
+    left:1.5rem;
+}
+
+#horizontal{
+    background-color: white;
+    height: 1rem;
+    width: 3rem;
+    position: relative;
+    left: -0.45rem;
+}
+
+#derniereLigne1 h1{
+    font-weight: 300;
+    padding: 0 6px;
+}
+
+#derniereListeContainer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#derniereLigne1,#derniereLigne2,.ligne1liste,.ligne2liste{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#derniereLigne2,.ligne2liste{
+    margin:10px 0;
+}
+
+.Ligne{
+    background-color: #000000;
+    height: 0.15rem;
+    width: calc(50vw - 9.78rem); 
+}
+
+.h1Ligne{
+    background-color: #000000;
+    color: white;
+    padding: 5px 20px;
+    transition: 0.3s ease;
+}
+
+.moinsBouton{
+    height:4.1rem;
+    width:4.1rem;
+    caret-color: transparent;
+    background-color: black;
+    display:flex;
+    margin-left:20px;
+    align-items: center;
+    justify-content: center;
+    transition: 0.3s ease;
+}
+
+.delete-btn-moins{
+    width: 2rem;
+    position:relative;
+    right:-2rem;
+    border:none;
+    height: 0.7rem;
+    background-color: white;
+}
+
+.h1Ligne:hover{
+    transform: scale(1.05);
+    transition: 0.5s ease;
+    cursor: pointer;
+}
+
+.delete-btn{
+    height:4.1rem;
+    width:4.1rem;
+    opacity:0;
+    cursor:pointer;
+}
+
+.listeContainer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.ligne1liste h1{
+    padding: 0 10px;
+}
+
+.RightLigne,.LeftLigne{
+    width: calc(50vw - 6.99rem);
+    background-color: #000000;
+    height: 0.15rem;
 }
