--- a/templates/user/new_liste.html.twig
+++ b/templates/user/new_liste.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Liste{% endblock %}
+{% block title %}Nouvelle Liste{% endblock %}
 
 {% block body %}
 <div id="formcreateliste">
