--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -97,7 +97,7 @@ input::placeholder {
     text-align: center;
     height: 3vh;
     font-family: 'Helvetica 55 Roman', sans-serif;
-    width:10vw;
+    width:8vw;
     background-color: rgb(255, 255, 255);
     font-size: 1vw;
     text-align: center;
@@ -110,11 +110,13 @@ input::placeholder {
     flex-direction: row;
 }
 .infoliste{
+    margin-top: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
     flex-direction: row;
+    margin-bottom: 25px;
 }
 
 .dateCreationliste,.nomliste{
@@ -129,5 +131,217 @@ input::placeholder {
     font-size: 1vw;
     text-align: center;
     color: white;
+    font-size: 1.5vw;
+}
+.article{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    flex-direction: row;
+}
+.article_quantite,.defqte{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color:black;
+    height:5vh;
+    width: 8vw;
+    font-size: 2vw;
+}
+.article_nom{
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    text-align: center;
+    color:black;
+    height:5vh;
+    width: 20vw;
+    font-size: 2vw;
+}
+.article_prix,.defprix{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color:black;
+    height:5vh;
+    width: 8vw;
+    font-size: 2vw;
+}
+.supprimerarticle{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-color: black;
+    color:white;
+    height:3vh;
+    width: 2vw;
+    font-size: 2vw;
+    font-weight: 900;
+}
+.defarticle{
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    text-align: center;
+    color:black;
+    height:5vh;
+    width: 24vw;
+    font-size: 2vw;
+}
+.barliste{
+    height: 2px;
+    width: 100%;
+    background-color: black;
+}
+.finticket{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+}
+.totalticket{
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    text-align: center;
+    
+    flex-direction: row;
+    
+    color:black;
+    height:5vh;
+    width: 32vw;
+    font-size: 2vw;
+}
+.nbtotalticket{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color:black;
+    height:5vh;
+    width: 8vw;
+    font-size: 2vw;
 
 }
+.item_liste:nth-child(39n+0){
+    background-image: url(../images/00.png);
+}
+.item_liste:nth-child(39n+1){
+    background-image: url(../images/01.png);
+}
+.item_liste:nth-child(39n+2){
+    background-image: url(../images/02.png);
+}
+.item_liste:nth-child(39n+3){
+    background-image: url(../images/03.png);
+}
+.item_liste:nth-child(39n+4){
+    background-image: url(../images/04.png);
+}
+.item_liste:nth-child(39n+5){
+    background-image: url(../images/05.png);
+}
+.item_liste:nth-child(39n+6){
+    background-image: url(../images/06.png);
+}
+.item_liste:nth-child(39n+7){
+    background-image: url(../images/07.png);
+}
+.item_liste:nth-child(39n+8){
+    background-image: url(../images/08.png);
+}
+.item_liste:nth-child(39n+9){
+    background-image: url(../images/09.png);
+}
+.item_liste:nth-child(39n+10){
+    background-image: url(../images/010.png);
+}
+.item_liste:nth-child(39n+11){
+    background-image: url(../images/011.png);
+}
+.item_liste:nth-child(39n+12){
+    background-image: url(../images/012.png);
+}
+.item_liste:nth-child(39n+13){
+    background-image: url(../images/013.png);
+}
+.item_liste:nth-child(39n+14){
+    background-image: url(../images/014.png);
+}
+.item_liste:nth-child(39n+15){
+    background-image: url(../images/015.png);
+}
+.item_liste:nth-child(39n+16){
+    background-image: url(../images/016.png);
+}
+.item_liste:nth-child(39n+17){
+    background-image: url(../images/017.png);
+}
+.item_liste:nth-child(39n+18){
+    background-image: url(../images/018.png);
+}
+.item_liste:nth-child(39n+19){
+    background-image: url(../images/019.png);
+}
+.item_liste:nth-child(39n+20){
+    background-image: url(../images/020.png);
+}
+.item_liste:nth-child(39n+21){
+    background-image: url(../images/021.png);
+}
+.item_liste:nth-child(39n+22){
+    background-image: url(../images/022.png);
+}
+.item_liste:nth-child(39n+23){
+    background-image: url(../images/023.png);
+}
+.item_liste:nth-child(39n+24){
+    background-image: url(../images/024.png);
+}
+.item_liste:nth-child(39n+25){
+    background-image: url(../images/025.png);
+}
+.item_liste:nth-child(39n+26){
+    background-image: url(../images/026.png);
+}
+.item_liste:nth-child(39n+27){
+    background-image: url(../images/027.png);
+}
+.item_liste:nth-child(39n+28){
+    background-image: url(../images/028.png);
+}
+.item_liste:nth-child(39n+29){
+    background-image: url(../images/029.png);
+}
+.item_liste:nth-child(39n+30){
+    background-image: url(../images/030.png);
+}
+.item_liste:nth-child(39n+31){
+    background-image: url(../images/031.png);
+}
+.item_liste:nth-child(39n+32){
+    background-image: url(../images/032.png);
+}
+.item_liste:nth-child(39n+33){
+    background-image: url(../images/033.png);
+}
+.item_liste:nth-child(39n+34){
+    background-image: url(../images/034.png);
+}
+.item_liste:nth-child(39n+35){
+    background-image: url(../images/035.png);
+}
+.item_liste:nth-child(39n+36){
+    background-image: url(../images/036.png);
+}
+.item_liste:nth-child(39n+37){
+    background-image: url(../images/037.png);
+}
+.item_liste:nth-child(39n+38){
+    background-image: url(../images/038.png);
+}
+
