--- a/templates/user/show_liste.html.twig
+++ b/templates/user/show_liste.html.twig
@@ -3,22 +3,7 @@
 {% block title %}Liste{% endblock %}
 
 {% block body %}
-    <div>
-        <div>Collaborateurs</div>
-        <div>
-            {# {% for collaborateur in liste.collaborateurs %}
-                {{ collaborateur.idUser.pseudo }}
-                <br>
-            {% endfor %} #}
-        </div>
-        <span>Ajouter un collaborateur</span>
-        <div>
-            <form action="{{ path('app_user_liste_id_collaborer', {'id': liste.id}) }}" method="get">
-                <input type="text" name="pseudo" placeholder="Pseudo">
-                <button type="submit">Ajouter</button>
-            </form>
-        </div>
-    </div>
+    <a href="{{ path('app_user_liste') }}" class="back">◄</a>
     <div class="pageshowlist">
         <div class="liste">
             <div class="infoliste">
@@ -52,19 +37,26 @@
                 <div class="barliste"></div>
             </div>
         </div>
+    </div>
+    <div class="collaborateur">
+        {#<div>Collaborateurs</div>
         <div>
-            <h2>Ajouter un article</h2>
-            {#}
-            {{ form_start(form) }}
-                {{ form_row(form.idArticle) }}
-                {{ form_row(form.quantite) }}
-                {{ form_row(form.estMarque) }}
-                <button type="submit">{{button_label|default("Ajouter à la liste")}}</button>
-            {{ form_widget(form) }}
-            {{ form_end(form) }}#}
+             {% for collaborateur in liste.collaborateurs %}
+                {{ collaborateur.idUser.pseudo }}
+                <br>
+            {% endfor %} 
+        </div>#}
+        <h1>Ajouter un collaborateur</h1>
+        <div>
+            <form action="{{ path('app_user_liste_id_collaborer', {'id': liste.id}) }}" method="get" class="formcollaborateur">
+                <input class="form-pseudo"type="text" name="pseudo" placeholder="Pseudo">
+                <button id="btncollaborateur"type="submit">
+                    <div id="plusBouton">
+                        <div id="vertical"></div>
+                        <div id="horizontal"></div>
+                    </div>
+                </button>
+            </form>
         </div>
     </div>
-    <a href="{{ path('app_user_liste') }}">back to list</a>
-
-    {{ include('liste/_delete_form.html.twig') }}
 {% endblock %}
